[package]
name = "fourl-trophy-place"
version = "0.1.0"
edition = "2021"
authors = ["Amaury <amaury.vdt@gmail.com>",]
description = "A pixel place to collect donation to particiapte at the 4L Trophy 2025 Edition"

[dependencies]
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement"] }
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
log = "0.4.6"
wasm-logger = "0.2.0"
gloo = "0.11.0"
stylist = { version = "0.13.0", features = ["yew_integration", "yew_use_style"] }
